# storage/api-docs/api-docs.json
@@ -5,6 +5,63 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/auth/complete-profile": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "operationId": "a63bf5b498b182343c5bd6b452b0e853",
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/CompleteProfileRequest"
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/UserViewModel"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Validation error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/v1/auth/login": {
             "post": {
                 "tags": [
@@ -45,6 +102,60 @@
                         }
                     }
                 }
+            }
+        },
+        "/api/v1/auth/verify-code": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "operationId": "5a9aa44e98f4b628299290526eaa102d",
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/VerifyCodeRequest"
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid code",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
             }
         }
     },
@@ -279,6 +390,50 @@
             }
         },
         "requestBodies": {
+            "CompleteProfileRequest": {
+                "required": true,
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "required": [
+                                "name",
+                                "identity_number",
+                                "account_type"
+                            ],
+                            "properties": {
+                                "name": {
+                                    "type": "string"
+                                },
+                                "identity_number": {
+                                    "type": "string"
+                                },
+                                "email": {
+                                    "type": "string",
+                                    "nullable": true
+                                },
+                                "account_type": {
+                                    "type": "string",
+                                    "enum": [
+                                        "individual",
+                                        "office",
+                                        "organization",
+                                        "support_facility"
+                                    ]
+                                },
+                                "commercial_name": {
+                                    "type": "string",
+                                    "nullable": true
+                                },
+                                "commercial_number": {
+                                    "type": "string",
+                                    "nullable": true
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            },
             "LoginRequest": {
                 "required": true,
                 "content": {
@@ -290,6 +445,25 @@
                             "properties": {
                                 "phone": {
                                     "description": "Phone number",
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            },
+            "VerifyCodeRequest": {
+                "required": true,
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "required": [
+                                "code"
+                            ],
+                            "properties": {
+                                "code": {
+                                    "description": "Verification code",
                                     "type": "string"
                                 }
                             },
